HDD: fixed padding for collapse, increase collapse duration

--- a/src/app/modules/hdd/manage/manage-hdd.scss
+++ b/src/app/modules/hdd/manage/manage-hdd.scss
@@ -7,4 +7,8 @@
 		text-decoration: none !important;
 		color: #000;
 	}
+
+	.card-body.collapsing {
+		transition-duration: 1.35s;
+	}
 }
